# ExamLex

./: .coveragerc  .env.example  .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR.md  LICENSE  README.md  SECURITY.md  SKILL.md  SUPPORT.md  cli-reference.md  install.ps1  install.sh  optimization-plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  cet4.md  cet6.md  configuration.md  contributing.md  design.md  development.md  getting-started.md  optimization-plan.md  postgraduate.md  project-quality.md  prompt-policy.md  release.md  roadmap.md  tem4.md  tem8.md  troubleshooting.md  usage.md
docs/plans/: 2026-07-11-bilingual-documentation-sync.md  2026-07-11-python-compatibility.md  2026-07-12-comprehensive-audit-fixes.md
docs/specs/: 2026-07-11-python-compatibility-design.md  2026-07-12-comprehensive-audit-fixes-design.md
examlex/: SKILL.md  cli.py  run.py
examlex/references/: answer-explanation-standard.md  assistant-roster.md  darwin-rubric.md  data-model.md  exam-profiles.md  multi-source-distillation.md  prompt-modes.md  source-collection.md  tutor-role-contracts.json  tutor-runtime.md  workflow.md
examlex/scripts/: __init__.py  backup_data.py  cleanup_sessions.py  cli_commit.py  cli_extract.py  cli_ops.py  cli_prompts.py  common.py  config.py  estimate_vocabulary.py  generate_daily_plan.py  ingest_strategy.py  list_strategies.py  manage_writing_versions.py  ops.py  record_practice.py  session.py  source_catalog.py  source_collector.py  strategy_store.py  sync_mirror.py  tutor_prompts.py  update_ability_profile.py  validate_profile.py  visualize.py  vocab_generator.py
examples/: sample-ability-profile.yaml  sample-learner-profile.yaml  sample-practice-ledger.yaml  sample-writing-versions.yaml
integrations/claude-code/: README.md
integrations/codex-app/: README.md
integrations/codex-cli/: README.md
integrations/cursor/: README.md
scripts/: __init__.py  check_data.ps1  check_env.ps1  install_capacity_monitor.ps1  install_claude.py  install_codex.py  install_cursor.py  maintenance.ps1  smoke_test_wheel.py  validate_repo.py
skills/culture-guide/: SKILL.md
tests/: test_analyze_trends.py  test_answer_explanation_standard.py  test_boundary.py  test_cleanup_sessions.py  test_cli.py  test_cli_malformed_input_hardening.py  test_cli_sources.py  test_common.py  test_common_errors_library.py  test_config.py  test_continuous_learning_e2e.py  test_continuous_learning_p0.py  test_continuous_learning_p1.py  test_errors.py  test_estimate_vocabulary.py  test_exam_artifact_contract.py  test_generate_daily_plan.py  test_install_scripts.py  test_malformed_input_hardening.py  test_manage_writing_versions.py  test_monitor_capacity.py  test_onboarding.py  test_ops.py  test_record_practice.py  test_score_writing_rubric.py  test_security.py  test_session.py  test_source_catalog.py  test_source_collector.py  test_spaced_review.py  test_strategy_store.py  test_summarize_errors.py  test_sync_mirror.py  test_tag_error.py  test_tem_support.py  test_timed_practice.py  test_tutor_prompts.py  test_tutor_runtime.py  test_update_ability_profile.py  test_validate_profile.py  (+5 more)
zh-CN/: README.md  cli-reference.md
(+263 files in other folders)
