[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "examlex"
version = "0.1.0"
description = "Agent Skill plus automation toolkit for CET-4, CET-6, and postgraduate English preparation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ExamLex Contributors" }]
dependencies = []

[project.scripts]
examlex = "examlex.cli:main"

[tool.setuptools.packages.find]
include = ["examlex*"]

[tool.setuptools.package-data]
examlex = ["SKILL.md", "assets/**/*", "references/*.md"]

[tool.unittest]
start-directory = "tests"

[tool.examlex]
skill-path = "skills/examlex"
prompt-mode = "public-safe"
