[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "examlex"
version = "0.1.0"
description = "Agent Skill plus automation toolkit for CET-4, CET-6, and postgraduate English preparation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ExamLex Contributors" }]
dependencies = []

[project.optional-dependencies]
quality = [
    "coverage==7.15.0",
    "ruff==0.15.20",
]
release = ["build==1.5.0"]

[project.urls]
Homepage = "https://github.com/SFEW888/ExamLex"
Repository = "https://github.com/SFEW888/ExamLex"
Issues = "https://github.com/SFEW888/ExamLex/issues"

[project.scripts]
examlex = "examlex.cli:main"

[tool.setuptools.packages.find]
include = ["examlex*"]

[tool.setuptools.package-data]
examlex = ["SKILL.md", "assets/**/*", "references/*.md"]

[tool.unittest]
start-directory = "tests"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["examlex"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.examlex]
skill-path = "skills/examlex"
prompt-mode = "public-safe"

[tool.examlex.mirror]
source = "skills/examlex"
generated = "examlex"
