[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "examlex"
version = "0.2.0"
description = "Agent Skill and automation toolkit for CET-4, CET-6, postgraduate English, TEM-4, and TEM-8 preparation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ExamLex Contributors" }]
dependencies = []

[project.optional-dependencies]
quality = [
    "coverage==7.15.0",
    "ruff==0.15.20",
]
security = [
    "bandit==1.9.4",
    "detect-secrets==1.5.0",
    "pip-audit==2.10.1",
]
release = ["build==1.5.0"]

[project.urls]
Homepage = "https://github.com/SFEW888/ExamLex"
Repository = "https://github.com/SFEW888/ExamLex"
Issues = "https://github.com/SFEW888/ExamLex/issues"

[project.scripts]
examlex = "examlex.cli:main"

[tool.setuptools.packages.find]
include = ["examlex*", "skills.examlex*"]

[tool.setuptools.package-data]
"skills.examlex" = ["SKILL.md", "assets/**/*", "references/**/*"]

[tool.unittest]
start-directory = "tests"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["examlex"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.examlex]
skill-path = "skills/examlex"
prompt-mode = "public-safe"

[tool.examlex.compatibility-package]
source = "skills/examlex"
wrapper = "examlex"
